[package]
name = "tower-http-codec"
version = "0.0.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bitflags = "1"
bytes = "0.5"
futures-core = "0.3"
http = "0.2"
http-body = "0.3"
pin-project-lite = "0.2"
tower-layer = "0.3"
tower-service = "0.3"

async-compression = { version = "0.3", features = ["stream"], optional = true }

[dev-dependencies]
futures = "0.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }
tower = "0.3"

[features]
br = ["async-compression/brotli"]
deflate = ["async-compression/zlib"]
gzip = ["async-compression/gzip"]
